--- a/introduction.mdx
+++ b/introduction.mdx
@@ -41,5 +41,5 @@ Update your docs to your brand and add valuable content for the best user conver
     Check out our showcase of our favorite documentation
   </Card>
 
-  <Card title="Card" icon="sparkles" />
+  <Card title="Card" icon="sparkles" href="https://mintlify.com/docs/content/components/accordions" />
 </CardGroup>
